[package]
name = "nasa_potd"
version = "0.1.0"
authors = ["myleftfoot <mylefty@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="*"
serde_derive = "*"
serde_json = "*"
toml = "*"
ureq = "*"
error-chain = "*"
futures = { version = "*" }
tokio = {version = "*", features = ["full"] }
url = "*"
exitcode = "*"
notify-rust = "*"
log = "*"
env_logger = "*"
ansi_term = "*"
chrono = "*"

[[bin]]
name="nasa_potd"
path="src/main.rs"
